--- a/examples/scroll-4-examples/style-1.css
+++ b/examples/scroll-4-examples/style-1.css
@@ -2,6 +2,13 @@
   scroll-behavior: smooth;
 } */
 
+.wrapper {
+  width: 100%;
+  height: 60vh;
+	background: #e4e4e4;
+	overflow: hidden;
+}
+
 .list {
   width: 100%;
   height: 100px;
