--- a/examples/others/Element.prototype.scrollTo/style.css
+++ b/examples/others/Element.prototype.scrollTo/style.css
@@ -1,14 +1,7 @@
-/* html {
-  scroll-behavior: smooth;
-} */
-
 .wrapper {
   width: 100%;
   height: 60vh;
-	background: #e4e4e4;
-  overflow: hidden;
-  margin-bottom: 40px;
-  margin-top: 40px;
+  overflow: scroll;
 }
 
 .list {
@@ -24,5 +17,5 @@
 }
 
 button {
-  margin-bottom: 80px;
+  top: 200px;
 }
