--- a/examples/others/native-scroll-bar/style.css
+++ b/examples/others/native-scroll-bar/style.css
@@ -1,14 +1,9 @@
-/* html {
-  scroll-behavior: smooth;
-} */
-
 .wrapper {
   width: 100%;
-  height: 60vh;
-	background: #e4e4e4;
-  overflow: hidden;
-  margin-bottom: 40px;
-  margin-top: 40px;
+  height: 400px;
+  overflow: scroll;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 .list {
@@ -21,8 +16,4 @@
   color: #ffffff;
   text-align: center;
   line-height: 100px;
-}
-
-button {
-  margin-bottom: 80px;
 }
